--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <div class="container" ng-controller="AppCtrl">
     <h1>AngulAir</h1>
 
-    <!-- output airport object using directive -->
-    <ul ng-repeat="airport in airports">
-        <!-- airport variable -->
-        <li>{{airport.code}}</li>
-        <li>{{airport.city}}</li>
-        <li>{{airport.name}}</li>
-    </ul>
+    <div class="container" ng-controller="AppCtrl">
+        <h1>AngulAir</h1>
+        <ul>
+            <li ng-repeat="airport in airports">
+                <a href="" ng-click="setAirport(airport.code)">{{airport.code}} - {{airport.city}}</a>
+            </li>
+        </ul>
+
+        <!--  show object based on whether it is null or not  -->
+        <p ng-show="currentAirport">Current airport: {{currentAirport.name}}</p>
+    </div>
 
 </div>
 
-<ul>
-    <li ng-repeat="airport in airports">{{airport.code}}</li>
-</ul>
+
 </body>
 </html>
